macro-template/tests/ui/err/splice_placeholder_outside_repetition.stderr
error: splice placeholder `#T` must be used inside `#( ... )*`
 --> tests/ui/err/splice_placeholder_outside_repetition.rs:5:28
  |
5 |         let _ = stringify!(#T);
  |                            ^^
